# raven-multimodal-rag

./: .gitignore  DEV_SPEC.md  PROGRESS.md  README.md  main.py  pyproject.toml
config/: settings.yaml
config/prompts/: agent_answer.txt  agent_reflect.txt  agent_rewrite.txt  agent_route.txt  chunk_refinement.txt  image_captioning.txt  metadata_enrichment.txt  rerank.txt
data/: .gitkeep  golden_papers.json
data/documents/: README.md
docs/: OPTIMIZATION_SPEC.md  P1_AGENTIC_RAG_SPEC.md  SPARSE_ALGORITHM_TUTORIAL.md  agentic-rag-tutorial.html  multimodal-changes.html  pymupdf-loader-tutorial.html  tutorial-phase-f-trace.md
scripts/: .gitkeep  clean_ingestion.py  evaluate.py  ingest.py  query.py  start_dashboard.py
src/: __init__.py
src/core/: __init__.py  settings.py  types.py
src/ingestion/: __init__.py  document_manager.py  pipeline.py
src/libs/: __init__.py  throttle.py
src/mcp_server/: __init__.py  protocol_handler.py  server.py
src/observability/: __init__.py  logger.py
tests/: __init__.py
tests/e2e/: test_dashboard_smoke.py  test_mcp_client.py  test_recall.py
tests/fixtures/: .gitkeep  golden_test_set.json
tests/integration/: test_mcp_server.py
tests/unit/: test_agent_foundation.py  test_agent_orchestrator.py  test_agent_reflector.py  test_agent_router.py  test_agent_synthesizer.py  test_agent_transformer.py  test_agentic_query_tool.py  test_composite_evaluator.py  test_config_loading.py  test_core_types.py  test_cross_encoder_reranker.py  test_custom_evaluator.py  test_dense_retriever.py  test_document_chunker.py  test_document_manager.py  (+35 more)
(+111 files in other folders)
