[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modular-rag-mcp-server"
version = "0.1.0"
description = "A modular, observable RAG framework with MCP protocol support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "pyyaml>=6.0",
    "chromadb>=0.4.0",
    "mcp>=1.0.0",
    "openai>=1.0.0",
    "dashscope>=1.20.0",
    "langchain-text-splitters>=0.0.1",
    "markitdown[pdf]>=0.1.0",
    "streamlit>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may use real services)",
    "e2e: End-to-end tests (full pipeline)",
]
pythonpath = ["."]
